scripts/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        consul.hashicorp.com/connect-inject: 'false'
    spec:
      containers:
        - name: frontend
          image: panchalravi/fake-service:0.24.2
          ports:
            - containerPort: 9090
          livenessProbe:
            initialDelaySeconds: 3
            httpGet:
              path: /health
              port: 9090
          readinessProbe:
            initialDelaySeconds: 3
            httpGet:
              path: /ready
              port: 9090
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
